--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pixelfed",
 	"private": true,
-    "version": "0.12.5+glitch.1.10.1",
+	"version": "0.12.5+glitch.1.10.1",
 	"scripts": {
 		"development": "mix",
 		"watch": "mix watch",
@@ -41,6 +41,7 @@
 		"@peertube/p2p-media-loader-core": "^1.0.14",
 		"@peertube/p2p-media-loader-hlsjs": "^1.0.14",
 		"@trevoreyre/autocomplete-vue": "^2.2.0",
+		"@vue/cli": "^5.0.8",
 		"@web3-storage/parse-link-header": "^3.1.0",
 		"@zip.js/zip.js": "^2.7.24",
 		"animate.css": "^4.1.0",
